fix scroll and dark mode bug

--- a/src/assets/scss/animation.scss
+++ b/src/assets/scss/animation.scss
@@ -77,7 +77,7 @@
   }
 
   &__cursorCont {
-    position: fixed;
+    position: absolute;
     top: -100px;
     right: -100px;
     z-index: 999;
@@ -100,6 +100,16 @@
     left: 30%;
     opacity: 0;
   }
+}
+
+[data-theme='dark'] .anim__dropdown-img--dark,
+[data-theme='light'] .anim__dropdown-img--light {
+  display: block;
+}
+
+[data-theme='dark'] .anim__dropdown-img--light,
+[data-theme='light'] .anim__dropdown-img--dark {
+  display: none;
 }
 
 // make sure content is still visible without JS whilst avoiding FOUC
